      be the first dependency if it is only included in the perl
      from experimental.  Thanks to Dominic Hargreaves for the
      report and the patch.  (Closes: #637793)
    + [NT] Warn about (build)depending/recommending on packaging-dev.
      Thanks to Luk Claes for the report and the initial patch.
      (Closes: #629308)
  * checks/{filenames,rules}.desc:
    + [NT] Improved the descriptions of some tags.  (Closes: #639018)
  * checks/files{,.desc}:
    + [NT] Added exceptions to "extra-license-file" for manpages,
      static libraries, .pc-, elf and pyshared-data-files.  This
      covers all the false-positives currently found in the liblicense
      package.  (Closes: #617901)
    + [NT] Ignore non-ELF files in multiarch paths, when checking for
      a missing pre-depends on multiarch-support.  Thanks to Sven
      Joachim for the report.  (Closes: #639735)
    + [NT] Added check for packages that only ships files in /usr/share
      and are not marked "Architecture: all".  Thanks to Evgeni Golov,
      Carl Fürstenberg and Jari Aalto for the suggestions.
      (Closes: #574689)
    + [JW] Do not emit third-party-package-in-python-dir for packages built
      from python{,3}-{stdlib-extensions,profiler,old-doctools} sources.
      Add reference to Python Policy in the tag description.
      (Closes: #640211)
  * checks/menus.desc:
    + [NT] Added reference to the doc-base manual to help people
      find the list of valid doc-base sections.  (Closes: #584280)
  * checks/shared-libs{,.desc}:
    + [JW] Fixed a typo in a tag description.  (Closes: #639177)
    + [NT] Do not emit shlib-calls-exit for libraries that have an
      INTERP section.  (Closes: #607399)
  * checks/source-copyright{,.desc}:
    + [JW] Added check for DEP-5 copyright files.  (Closes: #633779)
  * checks/standards-version:
    + [NT] Made the ancient-standards-version independent of the
      system time.
  * checks/version-substvars{,.desc}: