@@ -370,6 +370,11 @@ Certainty: certain
 Info: The "Homepage:" field in this package's control file does not
  contain a valid absolute URL. Most probably you forgot to specify
  the scheme (e.g. http).
+ .
+ This tag is also triggered if the scheme is not known by Lintian.
+ .
+ Please file a bug against Lintian, if this tag is triggered for a
+ valid homepage URL.
 
 Tag: no-homepage-field
 Severity: pedantic
