@@ -1,0 +1,5 @@
+Testname: fields-bad-homepage
+Sequence: 6000
+Version: 1.0
+Description: Test for invalid Homepage protocol
+Test-For: bad-homepage
