@@ -1,0 +1,2 @@
+W: fields-bad-homepage source: bad-homepage ttp://lintian.debian.org/
+W: fields-bad-homepage: bad-homepage ttp://lintian.debian.org/
