@@ -67,6 +67,8 @@ lintian (2.5.3) UNRELEASED; urgency=low
     + [NT] Warn about (build)depending/recommending on packaging-dev.
       Thanks to Luk Claes for the report and the initial patch.
       (Closes: #629308)
+    + [NT] Also emit bad-homepage if the Homepage URL does not seem to
+      be using a known protocol (for homepages).  (Closes: #580427)
   * checks/{filenames,rules}.desc:
     + [NT] Improved the descriptions of some tags.  (Closes: #639018)
   * checks/files{,.desc}:
